k8s/mysql-stateful-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  serviceName: "mysql"
  selector:
    matchLabels:
      app: mysql
      tier: mysql
  template:
    metadata:
      labels:
        app: mysql
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: bitnami/mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc-zenblog
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: mysql
