k8s/redis-stateful-svc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  labels:
    app: redis
spec:
  serviceName: "redis"
  selector:
    matchLabels:
      app: redis
      tier: redis
  template:
    metadata:
      labels:
        app: redis
        tier: redis
    spec:
      containers:
      - name: redis
        image: bitnami/redis:6.2
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    protocol: TCP
  selector:
    app: redis
