k8s/zipkin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      component: zipkin-server-pod
  template:
    metadata:
      labels:
        component: zipkin-server-pod
    spec:
      containers:
        - name: zipkin-server-ctn
          image: openzipkin/zipkin:2
          ports:
            - containerPort: 9411
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-server
  labels:
    component: zipkin-server
spec:
  type: ClusterIP
  selector:
    component: zipkin-server-pod
  ports:
    - port: 9411
      protocol: TCP
